assertion failure in awt_Frame.h

XMLWordPrintable

    • b64
    • generic, x86
    • generic, windows
    • Verified

      A debug version of jdk7 b51 fails with assertion in awt_Frame.h, line 121:

      INLINE HWND GetProxyFocusOwner() {
      --> DASSERT(AwtToolkit::MainThread() == ::GetCurrentThreadId());

      Any regression focus test can verify it, e.g. test/java/awt/Focus/Window/*

            Assignee:
            Anton Tarasov (Inactive)
            Reporter:
            Anton Tarasov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: