6821291: assertion failure in awt_Frame.h

Reviewed-by: dcherepanov, art